...
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="8dp">


                <TextView
                        android:id="@+id/board_title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_margin="8dp"
                        android:textColor="@color/colorPrimary"
                        android:text="Dummy Dummy Dummy Dummy "
...
