...
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/columnTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginLeft="16dp"
                        android:textStyle="bold"
                        android:gravity="center_vertical"
...

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnEditColumn"
                        android:layout_gravity="left"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/edit"
                        android:layout_marginLeft="8dp"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
...
